--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	},
 	"dependencies": {
 		"chalk": "^2.4.2",
-		"cli-welcome": "^2.2.2"
+		"cli-welcome": "^2.2.2",
+		"log-symbols": "^4.0.0"
 	},
 	"keywords": [
 		"jon wood",
